# FunASR-nano-onnx-gguf

./: 01-Export-Encoder-Adaptor-CTC.py  01-Export-Encoder-Adaptor-ONNX.py  01-Export-Encoder-ONNX.py  01_Export_ONNX.py  02-Export-Decoder-GGUF.py  02-Quantize-ONNX.py  03-Inference.py  03_Inference_cpu.py  03_Inference_cpu_int8.py  04-Inference.py  05-Verify-Initial-Consistency.py  08-Verify-Final-Padding-Consistency.py  09-Export-Paddable-ONNX.py  10-Verify-ONNX-Consistency.py  11-Verify-Multi-Duration-Padding.py  12-Benchmark-Old-DirectML-60s.py  13-Benchmark-New-DirectML-60s.py  13.py  14-Benchmark-Old-Final.py  14.py  15-Benchmark-New-Final.py  16-Quantize-Paddable-ONNX.py  17-Benchmark-New-FP16-30s.py  LICENSE  README.md  asr_e2e.py  pyproject.toml  requirements.txt
Fun-ASR-Nano-2512/: 模型下载到这里.txt
fun_asr_gguf/: __init__.py  asr_engine.py  llama.py  model_definition.py  model_definition_debug.py  model_definition_paddable.py  nano_dataclass.py  nano_llama.py  nano_onnx.py  types.py
fun_asr_gguf/hotword/: __init__.py  hot_phoneme.py  rag_fast.py
important/: asr_e2e.py
