[project]
name = "funasr-nano-onnx-gguf"
authors = [{ name = "HaujetZhao" }]
version = "0.0.1"
description = "本项目提供了一套完整的脚本，用于将 FunASR-Nano 模型转换为 GGUF 格式，并实现纯本地推理（支持 ONNX Encoder + GGUF Decoder）。"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gguf>=0.17.1",
    "numpy>=2.2.6",
    "onnx>=1.20.1",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "rich>=14.2.0",
    "srt>=3.5.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
cpu = ["onnxruntime>=1.23.2"]
export-model = [
    "modelscope>=1.34.0",
    "onnxruntime-directml>=1.23.0",
    "onnxscript>=0.5.7",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=4.57.6",
]
gpu = ["onnxruntime-gpu>=1.23.2"]
notebook = ["ipykernel>=7.1.0", "ipynb>=0.5.1", "pip>=25.3"]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[project.urls]
Repository = "https://github.com/HaujetZhao/Fun-ASR-GGUF"
Issues = "https://github.com/HaujetZhao/Fun-ASR-GGUF/issues"
